--- a/components/abstract.tex
+++ b/components/abstract.tex
@@ -12,6 +12,6 @@ Mass spectrometry (MS)-based proteomics is an essential tool in clinical cancer 
 
 In this thesis, an adaptation of the Transformer-based model \textit{Modanovo} is presented to bridge the gap between de novo sequencing and TMT multiplexing. By expanding the vocabulary to include TMT-specific tokens and integrating a covariate embedding for TMT status, the model was trained to explicitly account for the chemical signatures of the label. Fine-tuning was performed on a comprehensive dataset consisting of 82\% TMT-labeled multi-PTM spectra and an 18\% "replay set" of unlabeled data to prevent catastrophic forgetting.
 
-The results on the test dataset demonstrate robust performance with an Area Under the Precision-Recall Curve (AUPCC) of 0.89 for TMT data. Notably, the identification of modifications such as ubiquitination and monomethylation was partially enhanced in comparison to nonTMT data. Iterative hyperparameter optimization, specifically expanding the isotope error range and utilizing a beam search size of 5, proved crucial for managing increased spectral complexity.
+The results on the test dataset demonstrate robust performance with an Area Under the Precision-Coverage Curve (AUPCC) of 0.89 for TMT data. Iterative hyperparameter optimization, specifically expanding the isotope error range and utilizing a beam search size of 5, proved crucial for managing increased spectral complexity.
 
 Applied to an independent glioma TMT dataset comprising 6.48 million spectra, the model notably expanded the space of identified spectra. Compared to MaxQuant, the de novo approach identified 40,000 additional unique peptides and provided high-confidence sequence suggestions for over 670,000 previously unidentified spectra. Biological highlights include the identification of 694 genomically validated SNPs and the detection of phosphorylation at Serine 15 of PYGL, a key metabolic switch for tumor cell survival under hypoxia. This work demonstrates that integrating TMT-specific knowledge into Transformer models unlocks the "dark proteome" of clinical samples, offering a scalable platform for personalized proteogenomics.
