--- a/components/settings.tex
+++ b/components/settings.tex
@@ -213,7 +213,7 @@ range-phrase = --,
 %\usepackage[avantgarde]{quotchap}
 
 % set the bibliography style
-\usepackage[style=numeric,backend=biber,bibencoding=utf8,mincitenames=2,maxcitenames=3, hyperref=true,url=false,eprint=false]{biblatex}
+\usepackage[style=numeric,backend=bibtex,bibencoding=utf8,mincitenames=2,maxcitenames=3, hyperref=true,url=false,eprint=false]{biblatex}
 %\bibliographystyle{styles/bauermaNum}
 %\bibliographystyle{alpha}
 %\bibliographystyle{plain}
