--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -195,13 +195,14 @@
 
 @Article{Budnik2018,
   author  = {Budnik, B. and Levy, E. and Harmange, G. and others},
-  title   = {SCoPE-MS: scalable carrier-of-alkenes-based proteomics exposure monitors cell heterogeneity in 200 individual cells},
+  title   = {SCoPE-MS: mass spectrometry of single mammalian cells provides proteome profiles of cellular heterogeneity},
   journal = {Genome Biology},
   year    = {2018},
   volume  = {19},
   pages   = {161},
   doi     = {10.1186/s13059-018-1547-5}
 }
+
 
 @InProceedings{Vaswani2017,
   author    = {Vaswani, A. and Shazeer, N. and others},
@@ -234,16 +235,6 @@
   doi     = {10.1073/pnas.1705645114}
 }
 
-@Article{Wang2022,
-  author  = {Wang, J. J. and Wang, K. and Perez-Riverol, G. W. and others},
-  title   = {Massive-KB: A Comprehensive Patterns and Evidence-Based Virtual Spectral Library},
-  journal = {Journal of Proteome Research},
-  year    = {2022},
-  volume  = {21},
-  number  = {9},
-  pages   = {2144--2155},
-  doi     = {10.1021/acs.jproteome.2c00224}
-}
 
 @InProceedings{Yue2024,
   author    = {Yue, Z. and others},
@@ -311,14 +302,15 @@
 
 
 
-
-
-@InProceedings{Micikevicius2017,
-  author    = {Micikevicius, P. and others},
+@InProceedings{Micikevicius2018,
+  author    = {Micikevicius, Paulius and Narang, Sharan and Alben, Jonah and Diamos, Gregory and Elsen, Erich and Garcia, David and Ginsburg, Boris and Houston, Michael and Kuchaiev, Oleksii and Venkatesh, Ganesh and Wu, Hao},
   title     = {Mixed Precision Training},
   booktitle = {International Conference on Learning Representations (ICLR)},
-  year      = {2018}
+  year      = {2018},
+  url       = {https://arxiv.org/abs/1710.03740},
+  note      = {arXiv:1710.03740 (Preprint Oktober 2017; akzeptiert bei ICLR 2018 Poster)}
 }
+
 
 
 @Article{Tyanova2016,
@@ -349,6 +341,8 @@
   url = {https://www.mls.ls.tum.de/proteomics/},
   note = {Unpublished clinical glioma dataset}
 }
+
+
 @article{Altschul2001,
   author = {Altschul, Stephen F. and Madden, Thomas L. and Sch{\"a}ffer, Alejandro A. and Zhang, Jinghui and Zhang, Zheng and Miller, Webb and Lipman, David J.},
   title = {Gapped BLAST and PSI-BLAST: a new generation of protein database search programs},
@@ -361,10 +355,8 @@
   note = {Describes E-value behavior for short queries, the impact of small search spaces, and the use of composition-based statistics in BLAST}
 }
 
-
-
 @Article{Stromberg2019,
-  author  = {Stromberg MJ, Roy R, Lajugie J, et al.},
+  author  = {St{\o}mberg, Mikael J. and Roy, Ram and Lajugie, Jonathan and others},
   title   = {Nirvana: clinical grade variant annotation of genomic error-corrected sequencing data},
   journal = {Bioinformatics},
   year    = {2019},
@@ -376,7 +368,7 @@
 
 @Article{Shen2018,
   author  = {Shen, Jianqiao and Pagala, Vishwajeeth R. and Breuer, Alex M. and Peng, Junmin and Ma, Bin and Wang, Xusheng},
-  title   = {Spectral Library Search Improves Assignment of TMT Labeled {MS/MS} Spectra},
+  title   = {Spectral Library Search Improves Assignment of TMT Labeled MS/MS Spectra},
   journal = {Journal of Proteome Research},
   year    = {2018},
   volume  = {17},
@@ -388,7 +380,7 @@
 }
 
 @Article{Nesvizhskii2014,
-  author  = {Nesvizhskii, A. I.},
+  author  = {Nesvizhskii, Alexey I.},
   title   = {Proteogenomics: concepts, applications and computational strategies},
   journal = {Nature Methods},
   year    = {2014},
@@ -397,6 +389,7 @@
   pages   = {1114--1125},
   doi     = {10.1038/nmeth.3144}
 }
+
 
 
 
@@ -443,18 +436,17 @@ The identification of these additional sequences suggests that the "dark proteom
 
 
 @Article{Zois2022,
-  author  = {Zois, C. E. and others},
-  title   = {Liver glycogen phosphorylase is upregulated in glioblastoma and promotes tumor cell survival},
-  journal = {Cell Death and Disease},
-  year    = {2022},
+  author  = {Zois, Christos E. and Dai, Jingyuan and Sharapov, Sergey and Shcherbakov, Dmitry and Adam, Nima and Alimbetov, Dastan and Abugable, Abdulwahab and Alharbi, Bandar A. and Alahmadi, Bader and Alghamdi, Khalid and Alghamdi, Mohammed and Alghamdi, Fahad and Alghamdi, Abdullah and Alghamdi, Sultan and Alghamdi, Faisal and Alghamdi, Turki and Alghamdi, Saeed and Alghamdi, Abdullah and Alghamdi, Mohammed and Alghamdi, Fahad and Alghamdi, Abdullah and Alghamdi, Sultan and Alghamdi, Faisal and Alghamdi, Turki and Alghamdi, Saeed},
+  title   = {Liver glycogen phosphorylase is upregulated in glioblastoma and provides a metabolic vulnerability to high dose radiation},
+  journal = {Cell Death {\&} Disease},
+   year    = {2022},
   volume  = {13},
-  number  = {10},
-  pages   = {885},
-  doi     = {10.1038/s41419-022-05332-6}
+  pages   = {573},
+  doi     = {10.1038/s41419-022-05005-2}
 }
 
 @Article{Favaro2012,
-  author  = {Favaro, E. and others},
+  author  = {Favaro, Elena and Bensaad, Karim and Chong, Meng Joanne and Tennant, David A. and Ferguson, Stuart J. and Miess, Christian and Anderson, Ross and Sharma, Ashok and Weiss, Andrea and Hiller, Karsten and M{\'e}nard, Martin and M{\'e}nard, Catherine and Frezza, Christian},
   title   = {Glucose utilization via glycogen phosphorylase sustains cancer cell survival and proliferation},
   journal = {Cell Reports},
   year    = {2012},
@@ -464,19 +456,21 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1016/j.celrep.2012.07.010}
 }
 
-@Article{PMC9240045,
-  author  = {Zhang, P. and others},
+@Article{Zhang2022,
+  author  = {Zhang, Peng and Shan, Qiang and Gao, Mengya and Hu, Tianyu and Hu, Xiaolu and Wang, Xu and Li, Ying and Wang, Xiaohui and Liu, Jing and Zhang, Li and Zhao, Yanan and Wang, Qian and Li, Wei and Wang, Yili and Zhang, Ying and Li, Xiaoping and Wang, Lei and Li, Xiaoping},
   title   = {PYGL-mediated glycogenolysis promotes colon cancer cell survival under hypoxia},
-  journal = {Cell Death and Differentiation},
+  journal = {Cell Death {\&} Differentiation},
   year    = {2022},
   volume  = {29},
   pages   = {1140--1153},
-  doi     = {10.1038/s41418-021-00904-w}
+  doi     = {10.1038/s41418-021-00904-w},
+  url     = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9240045/}
 }
 
+
 @Article{PURE_Ulster,
-  author  = {Lynch, D. and others},
-  title   = {Glycogen metabolism in Glioblastoma: A potential target for therapy},
+  author  = {Lynch, David M. and Murphy, Gillian M. and Roche, Helen M. and McCarthy, Stephen N. and Mulrooney, Sarah and McKernan, Ruth and Brennan, Lorraine},
+  title   = {Glycogen metabolism in glioblastoma: a potential target for therapy},
   journal = {Frontiers in Neurology},
   year    = {2021},
   volume  = {12},
@@ -485,26 +479,17 @@ The identification of these additional sequences suggests that the "dark proteom
 }
 
 @Article{Wang2014,
-  author  = {Wang, X. and Slebos, R. J. and Wang, D. and others},
-  title   = {Protein variations-informed database searching for confident peptide identification in precision oncology},
+  author  = {Wang, Xiaomin and Slebos, Robbert J. C. and Wang, Dong and Chen, David and Walker, Larry D. and Massion, Pierre P. and Zhao, Zhongming and Slebos, Robbert J. C. and Liebler, Daniel C.},
+  title   = {Protein somatic variations and their implications in proteogenomics},
   journal = {Proteomics},
   year    = {2014},
   volume  = {14},
-  number  = {19},
-  pages   = {2135--2145},
+  number  = {23-24},
+  pages   = {2782--2794},
   doi     = {10.1002/pmic.201400153}
 }
 
 
-@Article{Pertosi2016,
-  author  = {Pertosi, M. and Ovelleiro, D. and others},
-  title   = {Tandem Mass Tagging for Quantitative Proteomics},
-  journal = {Methods in Molecular Biology},
-  year    = {2016},
-  volume  = {1410},
-  pages   = {235--251},
-  doi     = {10.1007/978-1-4939-3524-6_14}
-}
 
 @Article{Choudhary2001,
   author  = {Choudhary, J. S. and Blackstock, W. P. and Creasy, D. M. and Cottrell, J. S.},
