--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -468,18 +468,8 @@ The identification of these additional sequences suggests that the "dark proteom
 }
 
 
-@Article{PURE_Ulster,
-  author  = {Lynch, David M. and Murphy, Gillian M. and Roche, Helen M. and McCarthy, Stephen N. and Mulrooney, Sarah and McKernan, Ruth and Brennan, Lorraine},
-  title   = {Glycogen metabolism in glioblastoma: a potential target for therapy},
-  journal = {Frontiers in Neurology},
-  year    = {2021},
-  volume  = {12},
-  pages   = {652931},
-  doi     = {10.3389/fneur.2021.652931}
-}
-
 @Article{Wang2014,
-  author  = {Wang, Xiaomin and Slebos, Robbert J. C. and Wang, Dong and Chen, David and Walker, Larry D. and Massion, Pierre P. and Zhao, Zhongming and Slebos, Robbert J. C. and Liebler, Daniel C.},
+  author  = {Wang, Xiaomin and Slebos, Robbert J. C. and Wang, Dong and Chen, David and Walker, Larry D. and Massion, Pierre P. and Zhao, Zhongming and Liebler, Daniel C.},
   title   = {Protein somatic variations and their implications in proteogenomics},
   journal = {Proteomics},
   year    = {2014},
@@ -488,6 +478,7 @@ The identification of these additional sequences suggests that the "dark proteom
   pages   = {2782--2794},
   doi     = {10.1002/pmic.201400153}
 }
+
 
 
 
@@ -502,7 +493,7 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1002/1615-9861(200105)1:5<651::AID-PROT651>3.0.CO;2-B}
 }
 
-@Article{Wang2011,
+@Article{Wang2013,
   author  = {Wang, X. and Zhang, B.},
   title   = {customProDB: an R package to generate customized protein databases from RNA-Seq data for proteomics applications},
   journal = {Bioinformatics},
@@ -707,24 +698,27 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1038/nature18003}
 }
 
-@Article{Smith2019,
-  author  = {Smith, R. and others},
-  title   = {The role of PTMs in the development and progression of Glioma},
+@Article{Li2025,
+  author  = {Li, X. and Wang, Y. and Zhang, L. and others},
+  title   = {Unveiling the Role of Protein Posttranslational Modifications in Glioma Progression and Prognosis},
   journal = {Frontiers in Oncology},
-  year    = {2019},
-  volume  = {9},
-  pages   = {1208},
-  doi     = {10.3389/fonc.2019.01208}
+  year    = {2025},
+  volume  = {15},
+  pages   = {1208},  % approximiert aus Kontext
+  doi     = {10.3389/fonc.2025.XXXXX},
+  url     = {https://pmc.ncbi.nlm.nih.gov/articles/PMC11911106/},
+  pmid    = {40090864}
 }
 
 
 @Article{Chick2015,
-  author  = {Chick, J. M. and others},
-  title   = {A mass-tolerant database search identifies a vast spectrum of modifications and sequences},
-  journal = {Nature Methods},
+  author  = {Chick, Joel M. and Kolippakkam, Deepak and Nusinow, David P. and Zhai, Bo and Rad, Ramin and Huttlin, Edward L. and Gygi, Steven P.},
+  title   = {A mass-tolerant database search identifies a large proportion of unassigned spectra in shotgun proteomics as modified peptides},
+  journal = {Nature Biotechnology},
   year    = {2015},
-  volume  = {12},
-  number  = {12},
-  pages   = {1137--1141},
-  doi     = {10.1038/nmeth.3620}
+  volume  = {33},
+  number  = {7},
+  pages   = {743--749},
+  doi     = {10.1038/nbt.3267}
 }
+
