--- a/main.tex
+++ b/main.tex
@@ -70,11 +70,10 @@
 	\input{chapters/discussion}
 	
 	\printbibliography[title=References]
-	
-	
-	
 
-
+	% Abbreviations placed in back matter and added to TOC
+	\input{components/abbreviations}
+    
 %  \clearemptydoublepage
 %  
 	
