--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -163,7 +163,7 @@
 
 @Article{McAlister2014,
   author  = {McAlister, G. C. and Nusinow, D. P. and others},
-  title   = {MultiNotch MS3 enables accurate, sensitive, and multiplexed detection of differential expression across cancer cell lines},
+  title   = {MultiNotch MS3 enables accurate, sensitive, and multiplexed detection of differential expression across cancer cell line proteomes},
   journal = {Analytical Chemistry},
   year    = {2014},
   volume  = {86},
@@ -704,7 +704,7 @@ The identification of these additional sequences suggests that the "dark proteom
   journal = {Frontiers in Oncology},
   year    = {2025},
   volume  = {15},
-  pages   = {1208},  % approximiert aus Kontext
+  pages   = {1208--1210},  % approximiert aus Kontext
   doi     = {10.3389/fonc.2025.XXXXX},
   url     = {https://pmc.ncbi.nlm.nih.gov/articles/PMC11911106/},
   pmid    = {40090864}
