--- a/components/abbreviations.tex
+++ b/components/abbreviations.tex
@@ -3,27 +3,27 @@
 \backmatter
 \chapter*{Abbreviations}
 \addcontentsline{toc}{chapter}{Abbreviations}
-\begin{center}
-\begin{tabular}{p{0.25\textwidth} p{0.65\textwidth}}
-TMT & Tandem Mass Tag (used as TMT, TMT10/16, Modanovo-TMT) \\
-PTM / PTMs & Post\-/translational modification(s) (PTM, PTMs) \\
-m/z & mass\-/to\-/charge ratio (m/z) \\
-z & charge state (variable $z$ in $m/z$ context) \\
-K & Lysine residue (single\-letter amino acid code K; e.g., K[+229.163]) \\
-GlyGly & diglycine remnant (appears as GlyGly for ubiquitination) \\
-Modanovo / Modanovo\-TMT & model name / variant (proper name) \\
-Casanovo & baseline transformer model reference (proper name) \\
-bp / bases & base pairs / bases (SI units declared via \DeclareSIUnit\bases{b} and \DeclareSIUnit\bp{bp}) \\
-DNPS & De Novo Peptide Sequencing \\
-MQ & MaxQuant (database search software) \\
-VEP & Variant Effect Predictor \\
-SAAVs & Single Amino Acid Variant(s) \\
-MS & Mass Spectrometry \\
-MS1 & First-stage MS scan (precursor scan) \\
-MS2 & Second-stage MS scan (fragment ion scan) \\
-MS/MS & Tandem Mass Spectrometry \\
-ppm & parts per million \\
-PSM & Peptide\-/Spectrum Match \\
-RNN & Recurrent Neural Network \\
+
+\noindent
+\begin{tabular}{@{}ll@{}}
+    \textbf{TMT}             & Tandem Mass Tag (TMT, TMT10/16, Modanovo-TMT) \\
+    \textbf{PTM / PTMs}      & Post-translational modification(s) \\
+    \textbf{m/z}             & mass-to-charge ratio \\
+    \textbf{z}               & charge state \\
+    \textbf{K}               & Lysine residue (single-letter code K; e.g., K[+229.163]) \\
+    \textbf{GlyGly}          & diglycine remnant (appears as GlyGly for ubiquitination) \\
+    \textbf{Modanovo}        & model name / variant (proper name) \\
+    \textbf{Casanovo}        & baseline transformer model reference (proper name) \\
+    \textbf{bp / bases}      & base pairs / bases \\
+    \textbf{DNPS}            & De Novo Peptide Sequencing \\
+    \textbf{MQ}              & MaxQuant (database search software) \\
+    \textbf{VEP}             & Variant Effect Predictor \\
+    \textbf{SAAVs}           & Single Amino Acid Variant(s) \\
+    \textbf{MS}              & Mass Spectrometry \\
+    \textbf{MS1}             & First-stage MS scan (precursor scan) \\
+    \textbf{MS2}             & Second-stage MS scan (fragment ion scan) \\
+    \textbf{MS/MS}           & Tandem Mass Spectrometry \\
+    \textbf{ppm}             & parts per million \\
+    \textbf{PSM}             & Peptide-Spectrum Match \\
+    \textbf{RNN}             & Recurrent Neural Network \\
 \end{tabular}
-\end{center}
